ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "a301d19dbd7114abc806f91bcf1d08ba-175158067.ap-south-1.elb.amazonaws.com"
    http:
      paths:
      - pathType: Prefix
        path: "/ui"
        backend:
          service:
            name: ui
            port:
              number: 8080

      - pathType: Prefix
        path: "/offer"
        backend:
          service:
            name: offer
            port:
              number: 1001

      - pathType: Prefix
        path: "/shoe"
        backend:
          service:
            name: shoe
            port:
              number: 1002

      - pathType: Prefix
        path: "/wishlist"
        backend:
          service:
            name: wishlist
            port:
              number: 1003

      - pathType: Prefix
        path: "/cart"
        backend:
          service:
            name: cart
            port:
              number: 1004

      - pathType: Prefix
        path: "/zulu"
        backend:
          service:
            name: zulu
            port:
              number: 9999
